--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,28 @@ repos:
       # Run the formatter
       - id: ruff-format
         types_or: [python, pyi]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.10.0"
+    hooks:
+      - id: mypy
+        files: plum
+        additional_dependencies:
+          - pytest
+        exclude: |
+          (?x)
+          ^(
+                plum/__init__\.py
+              | plum/autoreload\.py
+              | plum/alias\.py
+              | plum/dispatcher\.py
+              | plum/function\.py
+              | plum/method\.py
+              | plum/parametric\.py
+              | plum/promotion\.py
+              | plum/repr\.py
+              | plum/resolver\.py
+              | plum/signature\.py
+              | plum/type\.py
+              | plum/util\.py
+          )$
